--- a/Challenge2/index.html
+++ b/Challenge2/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles/main.css">
   
-  <title>Frontend Mentor | Fylo data storage component</title>
+  <title>Frontend Mentor | Article preview component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -17,15 +16,17 @@
 </head>
 <body>
 
-  You’ve used 815 GB of your storage
+  Shift the overall look and feel by adding these wonderful 
+  touches to furniture in your home
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  <div class="background">
-    <img src="./images/bg-desktop.svg" />
-  </div>
+  Ever been in a room and felt like something was missing? Perhaps 
+  it felt slightly bare and uninviting. I’ve got some simple tips 
+  to help you make any room feel complete.
+
+  Michelle Appleton
+  28 Jun 2020
+
+  Share
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
